fix: prevent page shift on video load:
specify width and height on video element, so scaling can be done before the file loads.

--- a/themes/hugo-theme-codex/assets/scss/pages/post.scss
+++ b/themes/hugo-theme-codex/assets/scss/pages/post.scss
@@ -58,6 +58,7 @@ $tocBreakpoint: 1024px;
     width: 100%;
     margin: 20px auto;
     display: block;
+    height: auto;
   }
 
   a {
